# scikit-learn-json

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-linting.yml  python-tests.yml
scikit_learn_json/: exceptions.py  models.py  serializer.py
tests/: test_serializer.py
